<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/dialog_bg_color"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/videoTitleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Video Title"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:textSize="20sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/openLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_file_open_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_file"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/shareLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_share_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/renameLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_drive_file_rename_outline_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/infoLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_info_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />


    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/deleteLayout"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_delete_24" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            />


    </LinearLayout>



</LinearLayout>