<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/afterConversionButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/baseline_audiotrack_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/text_color"
            android:text="Video_Title"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/afterConversionTitle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/afterConversionOpenFile"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/baseline_file_open_24"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/open_file"
                android:gravity="center"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/afterConversionEditTitle"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:src="@drawable/baseline_mode_edit_24" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/edit_title"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/afterConversionShare"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:src="@drawable/baseline_share_24"
                android:scaleX="0.5"
                android:scaleY="0.5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:text="@string/share"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/afterConversionGoToOutputFolder"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        android:text="@string/go_to_output_folder" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical">
        <Space
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <com.google.android.gms.ads.AdView
            android:id="@+id/afterConversionBannerAd"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>